--- a/SalesWebMvc/appsettings.json
+++ b/SalesWebMvc/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMvcContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMvcContext-d5cdadc3-5066-4ebc-b421-3f6be27da6cb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMvcContext": "Server=localhost;userid=root;password=7415352;Database=saleswebmvcappdb"
   }
 }
